--- a/src/modules/helper/static/index.scss
+++ b/src/modules/helper/static/index.scss
@@ -45,6 +45,8 @@
 				flex: 1;
 
 				.tag {
+					display: flex;
+					flex-wrap: wrap;
 					margin-bottom: 10px;
 
 					.el-tag {
@@ -89,6 +91,11 @@
 			justify-content: space-between;
 			padding: 10px;
 			height: 30px;
+
+			.el-button {
+				font-size: 12px;
+				height: 28px;
+			}
 		}
 
 		&.is-add {
